labs/kubernetes/lab01-basic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
  labels:
    app: nginx
    environment: test
spec:
  containers:
    - image: nginx:1.25
      name: nginx-container
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "200m"
          memory: "256Mi"
      ports:
        - containerPort: 80
