labs/kubernetes/lab02-multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-app
spec:
  volumes:
    - name: shared-logs
      emptyDir: {}
  containers:
    - image: nginx:1.25
      name: nginx-container
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "200m"
          memory: "256Mi"
      ports:
        - containerPort: 80
      volumeMounts:
        - name: shared-logs
          mountPath: /var/log/nginx

    - image: busybox
      name: sidecar
      command: ["sh", "-c", "tail -f /var/log/nginx/access.log"]
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "200m"
          memory: "256Mi"
      volumeMounts:
        - name: shared-logs
          mountPath: /var/log/nginx
