labs/kubernetes/lab05-configmap-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-pod
spec:
  containers:
    - image: nginx:1.25
      name: config-nginx
      resources:
        limits:
          cpu: 200m
          memory: 256Mi
        requests:
          cpu: 100m
          memory: 128Mi
