labs/kubernetes/lab08-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  replicas: 3
  serviceName: "mongo-svc"
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi

  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo:6.0
          name: mongo
          ports:
            - containerPort: 27071

          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  selector:
    app: mongodb
  clusterIP: None
  ports:
    - port: 27017
